--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,20 +1,23 @@
-{% extends "learning_logs/base.html" %} {% block content %}
-<p>Topics</p>
+{% extends "learning_logs/base.html" %} 
+{% block content %}
+  <p>Topics</p>
 
-<ul>
-  {% for topic in topics %}
+  <ul>
+    {% for topic in topics %}
 
-  <li>
-    <a 
-    href="{% url 'learning_logs:topic' topic.id %}">
-    {{ topic }}
-    </a>
-  </li>
+    <li>
+      <a 
+        href="{% url 'learning_logs:topic' topic.id %}">
+        {{ topic }}
+      </a>
+    </li>
 
-  {% empty %}
-  <li>No topics have been added yet.</li>
+    {% empty %}
+    <li>No topics have been added yet.</li>
 
-  {% endfor %}
-</ul>
+    {% endfor %}
+  </ul>
+
+  <a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a>
 
 {% endblock content %}
