Add user registration functionality with form handling and template

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -8,6 +8,7 @@
       <button type="submit" >Log out</button>
     </form>
   {% else %}
+    <a href="{% url 'users:register' %}">Register</a> -
     <a href="{% url 'users:login' %}">Log in</a>
   {% endif %}
 </p>
